--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,8 @@
         <version>3.4</version>
         <relativePath />
     </parent>
-    <groupId>io.jenkins.plugins</groupId>
     <artifactId>logback-nats-appender</artifactId>
-    <version>0.2.2</version>
+    <version>0.2.2-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.60.1</jenkins.version>
@@ -46,7 +45,7 @@
         <dependency>
             <groupId>com.gerritforge</groupId>
             <artifactId>logback-nats-appender</artifactId>
-            <version>${project.version}</version>
+            <version>0.2.2</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
